# vyatta-cfg-dhcp-relay

./: .frlog  .gitignore  COPYING  Makefile.am  configure.ac  gen-templates.pl
debian/: README  changelog  control  copyright  files  rules
scripts/system/: dhcrelay-starter.pl  dhcrelay.init  dhcv6relay-starter.pl  dhcv6relay-status.pl  dhcv6relay.init
src/: templates.in
templates-op/restart/: node.def
templates-op/restart/dhcpv6/: node.def
templates-op/restart/dhcpv6/relay-agent/: node.def
templates/service/dhcp-relay/: node.def
templates/service/dhcp-relay/interface/: node.def
templates/service/dhcp-relay/relay-options/: node.def
templates/service/dhcp-relay/relay-options/hop-count/: node.def
templates/service/dhcp-relay/relay-options/max-size/: node.def
templates/service/dhcp-relay/relay-options/port/: node.def
templates/service/dhcp-relay/relay-options/relay-agents-packets/: node.def
templates/service/dhcp-relay/server/: node.def
